--- a/ebuy-cart-web/src/main/webapp/css/purchase.checkout.css
+++ b/ebuy-cart-web/src/main/webapp/css/purchase.checkout.css
@@ -455,7 +455,7 @@ table {border-collapse:collapse; border-spacing:0;}
 /** html .checkout-buttons .sticky-placeholder {
     position:absolute;
     bottom:auto;
-    top:expression( ( 0 - this.offsetHeight + ( document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop ) ) + 'px' );
+    top:expression( ( 0 - this.offsetHeight + ( document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop ) + 'px' );
 }*/
 .checkout-steps .step-current .sticky-placeholder {width:984px;}
 .checkout-buttons .sticky-placeholder .sticky-wrap {width:100%; height:50px; background-color:rgba(238, 238, 238, 0.8); background-color:transparent\9; filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=1, startColorstr='#CCEEEEEE',endColorstr='#CCEEEEEE'); zoom:1;}
